<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/portfolio"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                style="@style/TextViewStyle.White"/>

            <Button
                android:id="@+id/spotify_streamer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/spotify_streamer"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Blue"
                />
            <Button
                android:id="@+id/scores_app"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/scores_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Blue"
                />
            <Button
                android:id="@+id/library_app"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/library_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Blue"
                />
            <Button
                android:id="@+id/build_it_bigger"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/build_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Blue"
                />
            <Button
                android:id="@+id/xyz_reader"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/xyz_reader"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Blue"
                />
            <Button
                android:id="@+id/capstone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/capstone"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:theme="@style/ButtonStyle.Gray"
                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>